--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,9 +13,13 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.0",
-    "@mui/material": "^6.0.1",
+    "@mui/material": "^6.1.1",
+    "@mui/styles": "^6.1.1",
     "axios": "^1.7.5",
     "crypto-js": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "prop-type": "^0.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
